fixing spacing for extra images gallery

--- a/styles/pages/DetailsMobile.module.scss
+++ b/styles/pages/DetailsMobile.module.scss
@@ -58,7 +58,7 @@
                 .extra_images_gallery_image {
                     width: 100px !important;
                     height: 100px !important;
-                    margin: 5px 0px;
+                    margin: 5px 5px;
                 }
             }
         }
